--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 				</div>
 			</div> -->
 
-			<!-- <section class="colorlib-skills" data-section="skills">
+			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -287,23 +287,9 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+						<!-- <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<p style="color: black;">저는 개발의 첫 시작을 스마트인재개발원 교육과정으로 시작하였습니다. 이후 패스트캠퍼스 스프링 강의 과정을 들으며 Spring을 바탕으로 Spring MVC, Spring DI, AOP 등을 공부 하고 있습니다. 서버는 REST API를 통해 Web Server를 구현 할려고 하고 있습니다. 진행 중인 프로젝트의 완성도를 올리고 싶어 기능 구현 및 프론트(html,css,js) 쪽 공부도 열심히 하고 있습니다.
 							<br>새로운 언어를 배우는데 흥미가 있어 앞으로 필요하다면 새로운 언어를 공부 하고 싶습니다.</p>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingTwo">
-								<h4 class="panel-title">
-									<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Fastcampus Spring
-									</a>
-								</h4>
-							</div>
-							<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-								<div class="panel-body">
-									<h2>패스트캠퍼스 스프링</h2><br>
-									<h4>2022-11 ~ 진행중</h4>
-								</div>
-							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap" style="color: black;">
@@ -370,12 +356,57 @@
 								  	</div>
 								</div>
 							</div>
+						</div> -->
+						<div class="row">
+							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="hire">
+									<h3>LANGUAGE</h3>
+									<img src="images/java.png" width="20%">
+									<img src="images/python.png" width="20%">
+									<img src="images/sql.png" width="20%">
+								</div>
+							</div>
+						</div>
+						<br>
+						<div class="row">
+							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="hire">
+									<h3>FRONTEND</h3>
+									<img src="images/htmlcssjs.png" width="40%">
+									<img src="images/jquery.png" width="25%">
+									<img src="images/bootstrap.png" width="25%">
+								</div>
+							</div>
+						</div>
+						<br>
+						<div class="row">
+							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="hire">
+									<h3>BACKEND</h3>
+									<img src="images/springlogo.png" width="40%">
+									<img src="images/git.png" width="40%">
+								</div>
+							</div>
+						</div>
+						<br>
+						<div class="row">
+							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="hire">
+									<h3>DATABASE, TOOL</h3>
+									<img src="images/mysql.png" width="25%">
+									<img src="images/oracle.png" width="25%">
+									<img src="images/sts.png" width="25%">
+									<img src="images/intellij.png" width="25%">
+									<img src="images/visualcode.png" width="25%">
+									<img src="images/eclipse.png" width="25%">
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
-			<section class="colorlib-skills" data-section="skills">
+			<!-- <section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -456,7 +487,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
