--- a/index.html
+++ b/index.html
@@ -357,51 +357,47 @@
 								</div>
 							</div>
 						</div> -->
-						<div class="row">
-							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-								<div class="hire">
-									<h3>LANGUAGE</h3>
-									<img src="images/java.png" width="20%">
-									<img src="images/python.png" width="20%">
-									<img src="images/sql.png" width="20%">
-								</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
+							<div class="services color-1">
+								<span class="icon2"><i class="icon-bulb"></i></span>
+								<h3>LANGUAGE</h3>
+								<img src="images/java.png" width="100%">
+								<img src="images/python.png" width="100%">
+								<img src="images/sql.png" width="100%">
+							</div>
+							
+						</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+							<div class="services color-2">
+								<span class="icon2"><i class="icon-globe-outline"></i></span>
+								<h3>FRONTEND</h3>
+								<img src="images/htmlcssjs.png" width="100%" height="120%">
+								<img src="images/jquery.png" width="100%">
+								<img src="images/bootstrap.png" width="100%">
 							</div>
 						</div>
-						<br>
-						<div class="row">
-							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-								<div class="hire">
-									<h3>FRONTEND</h3>
-									<img src="images/htmlcssjs.png" width="40%">
-									<img src="images/jquery.png" width="25%">
-									<img src="images/bootstrap.png" width="25%">
-								</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
+							<div class="services color-3">
+								<span class="icon2"><i class="icon-bulb"></i></span>
+								<h3>BACKEND</h3>
+								<img src="images/springlogo.png" width="100%">
+								<img src="images/git.png" width="100%">
+							</div>
+
+						</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
+							<div class="services color-4">
+								<span class="icon2"><i class="icon-data"></i></span>
+								<h3>DATABASE, TOOL</h3>
+									<img src="images/mysql.png" width="60%">
+									<img src="images/oracle.png" width="60%">
+									<img src="images/sts.png" width="60%">
+									<img src="images/intellij.png" width="60%">
+									<img src="images/visualcode.png" width="60%">
+									<img src="images/eclipse.png" width="60%">
 							</div>
 						</div>
-						<br>
-						<div class="row">
-							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-								<div class="hire">
-									<h3>BACKEND</h3>
-									<img src="images/springlogo.png" width="40%">
-									<img src="images/git.png" width="40%">
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row">
-							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-								<div class="hire">
-									<h3>DATABASE, TOOL</h3>
-									<img src="images/mysql.png" width="25%">
-									<img src="images/oracle.png" width="25%">
-									<img src="images/sts.png" width="25%">
-									<img src="images/intellij.png" width="25%">
-									<img src="images/visualcode.png" width="25%">
-									<img src="images/eclipse.png" width="25%">
-								</div>
-							</div>
-						</div>
+						
 					</div>
 				</div>
 			</section>
